--- a/configs/instruction_induction.yaml
+++ b/configs/instruction_induction.yaml
@@ -1,3 +1,4 @@
+# instruction_induction.yaml
 generation:
   num_subsamples: 2
   num_demos: 3
@@ -6,23 +7,23 @@ generation:
     name: GPT_forward
     batch_size: 300
     gpt_config:
-      model: openai/gpt-3.5-turbo
+      model: meta-llama/llama-3-70b-instruct  # 修改这里
       api_base: https://openrouter.ai/api/v1
       temperature: 0.9
-      max_tokens: 50    # 减小生成长度
+      max_tokens: 50
       top_p: 0.9
       frequency_penalty: 0.0
       presence_penalty: 0.0
 
 evaluation:
   method: exec_accuracy
-  num_samples: 15          # 少量评估
-  num_few_shot: 3          # 如果允许，去掉 few-shot 进一步省时间
+  num_samples: 15
+  num_few_shot: 3
   model:
     name: GPT_forward
     batch_size: 15
     gpt_config:
-      model: openai/gpt-3.5-turbo
+      model: meta-llama/llama-3-70b-instruct  # 修改这里
       api_base: https://openrouter.ai/api/v1
       temperature: 0.7
       max_tokens: 100
@@ -35,7 +36,7 @@ demo:
     name: GPT_forward
     batch_size: 300
     gpt_config:
-      model: openai/gpt-3.5-turbo
+      model: meta-llama/llama-3-70b-instruct  # 修改这里
       api_base: https://openrouter.ai/api/v1
       temperature: 0.7
       max_tokens: 100
