--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ $env: OPENROUTER_API_KEY =  "sk-or-v1-dfa0"
 $env:OPENROUTER_API_BASE = "https://openrouter.ai/api/v1"
 python run_instructzero.py --task antonyms  --model_name vicuna --HF_cache_dir "D:\Py\LLM" --random_proj uniform --intrinsic_dim 30 --n_prompt_tokens 5 --seed 42
 python run_instructzero.py --task antonyms --model_name vicuna --HF_cache_dir /home2/langj/Covariates-improvement-in-Prompt-based-LLM/models/qwen/ --api_model qwen/qwen-2.5-72b-instruct --random_proj uniform --intrinsic_dim 30 --n_prompt_tokens 5 --seed 114
-deepseek_key=sk-998d487791454d4394b7054ef08e6dc8
+deepseek_key=sk-998d4
 
 ===== Summary =====
 task                           status     score    exit_code log
